synchronizing with trunk
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/etch/branches/etch-python@718128 13f79535-47bb-0310-9956-ffa450edef68